# py2many

./: .flake8  .gitignore  CHANGELOG.md  README.md  TODO.md  py2many.py  pyproject.toml  setup.py  tox.ini
doc/: Adding_a_backend.md  Rewriters.md  Tools.md
py2many/: __init__.py  analysis.py  ast_helpers.py  ast_predicates.py  astx.py  cli.py  clike.py  context.py  declaration_extractor.py  defaults.py  descript.ion  exceptions.py  helpers.py  inference.py  language.py  mutability_transformer.py  pipeline.py  python_transformer.py  raises_transformer.py  registry.py  result.py  rewriters.py  scope.py  technical_debt.py  toposort_modules.py  tracer.py  version.py
py2many/rewriters/: __init__.py  __template__.py  complex_destructuring.py  descript.ion  doc_string_to_comment.py  f_string_join.py  ignored_assign.py  inferred_ann_assign.py  loop_else.py  print_bool.py  python_main.py  rename_transformer.py  str_str.py  unpack_scope.py  with_to_block_transformer.py
py2many/transformers/: __init__.py  annotation_transformer.py  mutability_transformer.py  nesting_transformer.py  python_transformer.py  raises_transformer.py
py2many/utilities/: find_executable.py  logger.py  toposort_modules.py
targets/cpp/: __init__.py  clike.py  plugins.py  tracer.py  transpiler.py
targets/dart/: __init__.py  clike.py  plugins.py  transpiler.py
targets/dlang/: __init__.py  clike.py  plugins.py  transpiler.py
targets/go/: __init__.py  clike.py  inference.py  plugins.py  transpiler.py
targets/kotlin/: __init__.py  clike.py  inference.py  plugins.py  transpiler.py
targets/nim/: __init__.py  clike.py  inference.py  plugins.py  transpiler.py
targets/rust/: __init__.py  clike.py  inference.py  plugins.py  transpiler.py
targets/zig/: __init__.py  inference.py  plugins.py  rewriters.py  transpiler.py
tests/: test_cli.py  test_settings.py  test_tracer_cpp.py  test_transpile_self.py  test_transpiler_cpp.py  test_unsupported.py
tests/cases/: cleanup.sh  for_else.py  while_else.py
unused/: helpers.py
