[project]
name = "py2many"
description = "Python to CLike language transpiler."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arun Sharma"}]
requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "argparse_dataclass",
]

dynamic = ["version"]

[project.optional-dependencies]
lint = ["black"]
test = [
    "importlib-resources; python_version < '3.9'",
    "pytest",
    "pytest-cov",
    "astpretty",
    "jgo",
]

[project.scripts]
py2many = "py2many.__main__:main"

[project.urls]
Homepage = "https://github.com/adsharma/py2many"

[tool.setuptools.packages.find]
where = ["."]
include = ["py2many*", "targets*"]

[tool.setuptools.dynamic]
version = {attr = "py2many.version.__version__"}

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"